hw-9/manifests/apigateway/apigateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: apigateway-service
spec:
  selector:
    app: apigateway
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apigateway-deployment
  labels:
    app: apigateway
spec:
  replicas: 2
  selector:
    matchLabels:
      app: apigateway
  template:
    metadata:
      labels:
        app: apigateway
    spec:
      containers:
        - name: apigateway
          image: olegmeditskiy96/hw-8-apigateway-service:1.0
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: config
              mountPath: "/config"
              readOnly: true
      volumes:
        - name: config
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apigateway-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /()(.*)
            pathType: Prefix
            backend:
              service:
                name: apigateway-service
                port:
                  number: 80
